commit17DOM + fix

--- a/DOM_2/2.1/index.html
+++ b/DOM_2/2.1/index.html
@@ -4,150 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>2.1</title>
-    <style>
-      #field {
-        width: 200px;
-        height: 150px;
-        border: 10px solid black;
-        background-color: #00ff00;
-        position: relative;
-        overflow: hidden;
-        cursor: pointer;
-      }
-
-      #ball {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 40px;
-        height: 40px;
-        transition: all 1s;
-      }
-
-      .menu ul {
-        margin: 0;
-        list-style: none;
-        padding-left: 20px;
-        display: none;
-      }
-
-      .menu .title::before {
-        content: "▶ ";
-        font-size: 80%;
-        color: green;
-      }
-
-      .menu.open .title::before {
-        content: "▼ ";
-      }
-
-      .menu.open ul {
-        display: block;
-      }
-
-      h3 {
-        margin: 0;
-        padding-bottom: 0.3em;
-        padding-right: 20px;
-        font-size: 1.1em;
-      }
-
-      p {
-        margin: 0;
-        padding: 0 0 0.5em;
-      }
-
-      .pane {
-        background: #edf5e1;
-        padding: 10px 20px 10px;
-        border-top: solid 2px #c4df9b;
-        position: relative;
-      }
-
-      .remove-button {
-        position: absolute;
-        font-size: 110%;
-        top: 0;
-        color: darkred;
-        right: 10px;
-        display: block;
-        width: 24px;
-        height: 24px;
-        border: none;
-        background: transparent;
-        cursor: pointer;
-      }
-
-      .carousel {
-        position: relative;
-        width: 398px;
-        padding: 10px 40px;
-        border: 1px solid #ccc;
-        border-radius: 15px;
-        background: #eee;
-      }
-
-      .carousel img {
-        width: 130px;
-        height: 130px;
-        display: block;
-      }
-
-      .arrow {
-        position: absolute;
-        top: 60px;
-        padding: 0;
-        background: #ddd;
-        border-radius: 15px;
-        border: 1px solid gray;
-        font-size: 24px;
-        line-height: 24px;
-        color: #444;
-        display: block;
-      }
-
-      .arrow:focus {
-        outline: none;
-      }
-
-      .arrow:hover {
-        background: #ccc;
-        cursor: pointer;
-      }
-
-      .prev {
-        left: 7px;
-      }
-
-      .next {
-        right: 7px;
-      }
-
-      .gallery {
-        width: 390px;
-        overflow: hidden;
-      }
-
-      .gallery ul {
-        height: 130px;
-        width: 9999px;
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        transition: margin-left 250ms;
-        font-size: 0;
-      }
-
-      .gallery li {
-        display: inline-block;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <div>Задание 1</div>
+    
     <input type="button" id="hider" value="Нажмите, чтобы спрятать текст" />
 
     <div id="text">Текст</div>
 
+    <div>Задание 2</div>
+    
     Нажмите на поле для перемещения мяча.
 
     <div id="field">
@@ -160,6 +27,8 @@
       . . . . . . . . . . . . . . . . . . . . . . . . . .
     </div>
 
+    <div>Задание 3</div>
+
     <div id="items" class="menu">
       <span class="title">Сладости (нажми меня)!</span>
       <ul>
@@ -168,6 +37,8 @@
         <li>Мёд</li>
       </ul>
     </div>
+
+    <div>Задание 4</div>
 
     <div>
       <div class="pane">
@@ -199,6 +70,8 @@
       </div>
     </div>
 
+    <div>Задание 5</div>
+
     <div id="carousel" class="carousel">
       <button class="arrow prev">⇦</button>
       <div class="gallery">
@@ -217,96 +90,6 @@
       </div>
       <button class="arrow next">⇨</button>
     </div>
-    <script>
-      //task 1
-      function hide() {
-        text.innerHTML = "";
-      }
-
-      hider.onclick = hide;
-
-      //task 2
-      field.onclick = function (event) {
-        let fieldCoords = this.getBoundingClientRect();
-
-        let ballCoords = {
-          top:
-            event.clientY -
-            fieldCoords.top -
-            field.clientTop -
-            ball.clientHeight / 2,
-          left:
-            event.clientX -
-            fieldCoords.left -
-            field.clientLeft -
-            ball.clientWidth / 2,
-        };
-
-        if (ballCoords.top < 0) ballCoords.top = 0;
-
-        if (ballCoords.left < 0) ballCoords.left = 0;
-
-        if (ballCoords.left + ball.clientWidth > field.clientWidth) {
-          ballCoords.left = field.clientWidth - ball.clientWidth;
-        }
-
-        if (ballCoords.top + ball.clientHeight > field.clientHeight) {
-          ballCoords.top = field.clientHeight - ball.clientHeight;
-        }
-
-        ball.style.left = ballCoords.left + "px";
-        ball.style.top = ballCoords.top + "px";
-      };
-
-      //task 3
-      let menuElem = document.getElementById("items");
-      let titleElem = menuElem.querySelector(".title");
-
-      titleElem.onclick = function () {
-        menuElem.classList.toggle("open");
-      };
-
-      //task 4
-      let panes = document.querySelectorAll(".pane");
-
-      for (let pane of panes) {
-        pane.insertAdjacentHTML(
-          "afterbegin",
-          '<button class="remove-button">[x]</button>'
-        );
-        pane.firstChild.onclick = () => pane.remove();
-      }
-
-      //task 5
-      let i = 1;
-      for (let li of carousel.querySelectorAll("li")) {
-        li.style.position = "relative";
-        li.insertAdjacentHTML(
-          "beforeend",
-          `<span style="position:absolute;left:0;top:0">${i}</span>`
-        );
-        i++;
-      }
-
-      let width = 130;
-      let count = 3;
-
-      let list = carousel.querySelector("ul");
-      let listElems = carousel.querySelectorAll("li");
-
-      let position = 0;
-
-      carousel.querySelector(".prev").onclick = function () {
-        position += width * count;
-        position = Math.min(position, 0);
-        list.style.marginLeft = position + "px";
-      };
-
-      carousel.querySelector(".next").onclick = function () {
-        position -= width * count;
-        position = Math.max(position, -width * (listElems.length - count));
-        list.style.marginLeft = position + "px";
-      };
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
