--- a/DOM_1/1.11/1.11.1/index.html
+++ b/DOM_1/1.11/1.11.1/index.html
@@ -3,41 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>1.11</title>
-    <style>
-      body {
-        padding: 20px 0 0 20px;
-        cursor: pointer;
-      }
-
-      #field {
-        overflow: hidden;
-        width: 200px;
-        height: 150px;
-        border-top: 10px solid black;
-        border-right: 10px solid gray;
-        border-bottom: 10px solid gray;
-        border-left: 10px solid black;
-        background-color: #00ff00;
-        font: 10px/1.2 monospace;
-      }
-
-      .triangle-right {
-        position: relative;
-        width: 0;
-        height: 0;
-        border-top: 6px solid transparent;
-        border-bottom: 6px solid transparent;
-        border-left: 20px solid red;
-        text-indent: -20px;
-        font: 12px/1 monospace;
-      }
-    </style>
-    <script>
-      document.onclick = function (e) {
-        coords.innerHTML = e.clientX + ":" + e.clientY;
-      };
-    </script>
+    <title>1.11.1</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     Кликните в любом месте для получения координат в контексте окна.
@@ -63,26 +30,17 @@
     <div class="triangle-right" style="left: 200px; top: -42px">2</div>
   </body>
   <script>
+    document.onclick = function (e) {
+      coords.innerHTML = e.clientX + ":" + e.clientY;
+    };
+
     let fieldCoords = field.getBoundingClientRect();
 
     let answer = [
+      [fieldCoords.left, fieldCoords.top],
+      [fieldCoords.right, fieldCoords.bottom],
+      [fieldCoords.left + field.clientLeft, fieldCoords.top + field.clientTop],
       [
-        // 1
-        fieldCoords.left,
-        fieldCoords.top,
-      ],
-      [
-        // 2
-        fieldCoords.right,
-        fieldCoords.bottom,
-      ],
-      [
-        // 3
-        fieldCoords.left + field.clientLeft,
-        fieldCoords.top + field.clientTop,
-      ],
-      [
-        // 4
         fieldCoords.left + field.clientLeft + field.clientWidth,
         fieldCoords.top + field.clientTop + field.clientHeight,
       ],
