--- a/DOM_2/2.4/index.html
+++ b/DOM_2/2.4/index.html
@@ -4,36 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>2.4</title>
-    <style>
-      #largeImg {
-        border: solid 1px #ccc;
-        width: 550px;
-        height: 400px;
-        padding: 5px;
-      }
-
-      #thumbs a {
-        border: solid 1px #ccc;
-        width: 100px;
-        height: 100px;
-        padding: 3px;
-        margin: 2px;
-        float: left;
-      }
-
-      #thumbs a:hover {
-        border-color: #ff9900;
-      }
-
-      #thumbs li {
-        list-style: none;
-      }
-
-      #thumbs {
-        margin: 0;
-        padding: 0;
-      }
-    </style>
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
     <fieldset id="contents">
@@ -55,7 +26,6 @@
     </p>
 
     <ul id="thumbs">
-      <!-- браузер показывает небольшую встроенную подсказку из атрибута "title" при наведении курсора на текст -->
       <li>
         <a href="https://en.js.cx/gallery/img2-lg.jpg" title="Image 2"
           ><img src="https://en.js.cx/gallery/img2-thumb.jpg"
